making the Spark tutorial human readable

--- a/notebooks/SparkScenarioAggregation.ipynb
+++ b/notebooks/SparkScenarioAggregation.ipynb
@@ -1,19 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "### IPYTHON=1 IPYTHON_OPTS=notebook PYSPARK_PYTHON=python3 pyspark"
+    "## Launching\n",
+    "\n",
+    "Using Spark 1.4 and Python 3.4. The way of launching the ipython notebook has changed\n",
+    "\n",
+    "    IPYTHON=1 IPYTHON_OPTS=notebook PYSPARK_PYTHON=python3 pyspark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,18 +24,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql import SQLContext"
+    "from pyspark.sql import SQLContext, Row\n",
+    "import datetime\n",
+    "from collections import namedtuple\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the SQLContext"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -45,22 +56,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "from pyspark.sql import SQLContext, Row\n",
-    "import datetime\n",
-    "from collections import namedtuple\n",
-    "import numpy as np"
+    "### Create different \"classes\" for parsing the rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ideally the rows would be parsed like this, but because custom row aggregation is not fully supported"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -70,8 +81,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and because the number of scenarios is fixed, each scenario is a column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -82,23 +100,228 @@
     "    scenario_cols = [\"s%d\"%x for x in range(1,number_scenarios+1)]\n",
     "    names.extend(scenario_cols)\n",
     "    Scenarios = namedtuple('Scenarios', names)\n",
-    "    return Scenarios, scenario_cols"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "    return Scenarios, scenario_cols\n",
+    "\n",
     "Scenarios, scenario_cols = construct_scenarios_type()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and we can parse the rows of the csv file accordingly"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>243</th>\n",
+       "      <th>244</th>\n",
+       "      <th>245</th>\n",
+       "      <th>246</th>\n",
+       "      <th>247</th>\n",
+       "      <th>248</th>\n",
+       "      <th>249</th>\n",
+       "      <th>250</th>\n",
+       "      <th>251</th>\n",
+       "      <th>252</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RF1</td>\n",
+       "      <td>2015-04-14</td>\n",
+       "      <td>35.03</td>\n",
+       "      <td>34.678659</td>\n",
+       "      <td>35.193093</td>\n",
+       "      <td>35.611624</td>\n",
+       "      <td>34.920900</td>\n",
+       "      <td>35.275753</td>\n",
+       "      <td>34.885387</td>\n",
+       "      <td>34.794800</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35.445356</td>\n",
+       "      <td>34.829611</td>\n",
+       "      <td>35.514069</td>\n",
+       "      <td>35.372834</td>\n",
+       "      <td>35.343582</td>\n",
+       "      <td>34.828644</td>\n",
+       "      <td>34.824178</td>\n",
+       "      <td>34.774605</td>\n",
+       "      <td>34.879511</td>\n",
+       "      <td>34.856106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RF1</td>\n",
+       "      <td>2015-04-15</td>\n",
+       "      <td>35.20</td>\n",
+       "      <td>35.359100</td>\n",
+       "      <td>35.767287</td>\n",
+       "      <td>35.093559</td>\n",
+       "      <td>35.439729</td>\n",
+       "      <td>35.058909</td>\n",
+       "      <td>34.970520</td>\n",
+       "      <td>34.606949</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35.004487</td>\n",
+       "      <td>35.672156</td>\n",
+       "      <td>35.534417</td>\n",
+       "      <td>35.505887</td>\n",
+       "      <td>35.003543</td>\n",
+       "      <td>34.999186</td>\n",
+       "      <td>34.950814</td>\n",
+       "      <td>35.053176</td>\n",
+       "      <td>35.030339</td>\n",
+       "      <td>35.248848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RF1</td>\n",
+       "      <td>2015-04-16</td>\n",
+       "      <td>34.25</td>\n",
+       "      <td>34.863274</td>\n",
+       "      <td>34.135051</td>\n",
+       "      <td>34.509031</td>\n",
+       "      <td>34.097640</td>\n",
+       "      <td>34.002225</td>\n",
+       "      <td>33.610037</td>\n",
+       "      <td>34.563266</td>\n",
+       "      <td>...</td>\n",
+       "      <td>34.760356</td>\n",
+       "      <td>34.611395</td>\n",
+       "      <td>34.580549</td>\n",
+       "      <td>34.037870</td>\n",
+       "      <td>34.033167</td>\n",
+       "      <td>33.980956</td>\n",
+       "      <td>34.091450</td>\n",
+       "      <td>34.066796</td>\n",
+       "      <td>34.302765</td>\n",
+       "      <td>34.434559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RF1</td>\n",
+       "      <td>2015-04-17</td>\n",
+       "      <td>33.30</td>\n",
+       "      <td>33.179576</td>\n",
+       "      <td>33.571484</td>\n",
+       "      <td>33.140390</td>\n",
+       "      <td>33.040462</td>\n",
+       "      <td>32.629955</td>\n",
+       "      <td>33.628347</td>\n",
+       "      <td>34.043960</td>\n",
+       "      <td>...</td>\n",
+       "      <td>33.678814</td>\n",
+       "      <td>33.646469</td>\n",
+       "      <td>33.077790</td>\n",
+       "      <td>33.072865</td>\n",
+       "      <td>33.018190</td>\n",
+       "      <td>33.133906</td>\n",
+       "      <td>33.108084</td>\n",
+       "      <td>33.355289</td>\n",
+       "      <td>33.493416</td>\n",
+       "      <td>32.332506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>RF1</td>\n",
+       "      <td>2015-04-20</td>\n",
+       "      <td>33.40</td>\n",
+       "      <td>33.664591</td>\n",
+       "      <td>33.244414</td>\n",
+       "      <td>33.146995</td>\n",
+       "      <td>32.746707</td>\n",
+       "      <td>33.720002</td>\n",
+       "      <td>34.124926</td>\n",
+       "      <td>33.055073</td>\n",
+       "      <td>...</td>\n",
+       "      <td>33.737661</td>\n",
+       "      <td>33.183387</td>\n",
+       "      <td>33.178585</td>\n",
+       "      <td>33.125281</td>\n",
+       "      <td>33.238094</td>\n",
+       "      <td>33.212921</td>\n",
+       "      <td>33.453890</td>\n",
+       "      <td>33.588511</td>\n",
+       "      <td>32.456574</td>\n",
+       "      <td>32.499345</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 253 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0           1      2          3          4          5          6    \\\n",
+       "0  RF1  2015-04-14  35.03  34.678659  35.193093  35.611624  34.920900   \n",
+       "1  RF1  2015-04-15  35.20  35.359100  35.767287  35.093559  35.439729   \n",
+       "2  RF1  2015-04-16  34.25  34.863274  34.135051  34.509031  34.097640   \n",
+       "3  RF1  2015-04-17  33.30  33.179576  33.571484  33.140390  33.040462   \n",
+       "4  RF1  2015-04-20  33.40  33.664591  33.244414  33.146995  32.746707   \n",
+       "\n",
+       "         7          8          9      ...            243        244  \\\n",
+       "0  35.275753  34.885387  34.794800    ...      35.445356  34.829611   \n",
+       "1  35.058909  34.970520  34.606949    ...      35.004487  35.672156   \n",
+       "2  34.002225  33.610037  34.563266    ...      34.760356  34.611395   \n",
+       "3  32.629955  33.628347  34.043960    ...      33.678814  33.646469   \n",
+       "4  33.720002  34.124926  33.055073    ...      33.737661  33.183387   \n",
+       "\n",
+       "         245        246        247        248        249        250  \\\n",
+       "0  35.514069  35.372834  35.343582  34.828644  34.824178  34.774605   \n",
+       "1  35.534417  35.505887  35.003543  34.999186  34.950814  35.053176   \n",
+       "2  34.580549  34.037870  34.033167  33.980956  34.091450  34.066796   \n",
+       "3  33.077790  33.072865  33.018190  33.133906  33.108084  33.355289   \n",
+       "4  33.178585  33.125281  33.238094  33.212921  33.453890  33.588511   \n",
+       "\n",
+       "         251        252  \n",
+       "0  34.879511  34.856106  \n",
+       "1  35.030339  35.248848  \n",
+       "2  34.302765  34.434559  \n",
+       "3  33.493416  32.332506  \n",
+       "4  32.456574  32.499345  \n",
+       "\n",
+       "[5 rows x 253 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DATA_DIR = os.path.join(os.pardir, 'data')\n",
+    "csv_filename = os.path.join(DATA_DIR, \"scenarios2.csv\")\n",
+    "pd.read_csv(csv_filename, header=None).head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -120,24 +343,19 @@
     "    row[1] = datetime.datetime.strptime(row[1], DATE_FMT)\n",
     "    for i in np.arange(2,len(row)):\n",
     "        row[i] = float(row[i])\n",
-    "    return Scenarios(*row)\n",
-    "\n"
+    "    return Scenarios(*row)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "csv_filename = \"data/scenarios2.csv\""
+    "### Process the file in Spark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -150,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -162,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +391,7 @@
        "[Row(rf='RF1', date=datetime.datetime(2015, 4, 14, 0, 0), neutral=35.03, s1=34.67865912475935, s2=35.19309272805697, s3=35.61162381981636, s4=34.92090026310803, s5=35.2757534118607, s6=34.88538726175033, s7=34.7947997828024, s8=34.422262176432426, s9=35.32719209964416, s10=35.70279197608641, s11=34.70929644638722, s12=35.16468125943031, s13=34.7083308292015, s14=34.6909371576162, s15=34.24743006243561, s16=35.18043521116673, s17=35.26710783535421, s18=34.68646893255419, s19=35.42074885668956, s20=35.10073110319397, s21=34.62729258634153, s22=34.590238555794265, s23=35.12518904748294, s24=34.54164263329866, s25=34.780562034944296, s26=35.009313286776944, s27=35.19898478845906, s28=34.22306349493622, s29=35.58776307961069, s30=34.86817402539321, s31=34.904330793280025, s32=34.501576221982006, s33=34.908487404457446, s34=34.927195922549025, s35=35.26215239163238, s36=33.92269249584361, s37=34.30733618265355, s38=34.834677237655015, s39=34.62744354378543, s40=34.77382130417254, s41=34.72824373996907, s42=34.854606067026005, s43=34.64222172604983, s44=34.60156319552878, s45=35.70918069109046, s46=35.56681653497656, s47=33.896109761348846, s48=34.90079622390159, s49=34.58819986436787, s50=35.188539963456876, s51=34.01433872326011, s52=35.0739928313814, s53=34.613187678146446, s54=35.13416496576896, s55=34.99445195403314, s56=35.868772271139115, s57=34.43529924147874, s58=34.37558742473077, s59=35.767529209278806, s60=34.20841279797285, s61=35.02037678092141, s62=35.730742806800265, s63=35.58706083101516, s64=35.41139867751124, s65=34.35314972833785, s66=35.390550659047165, s67=34.766467265989796, s68=34.181696092298104, s69=35.70013050000655, s70=35.533538713265656, s71=34.69355471713625, s72=35.03, s73=34.88218261135854, s74=34.75938897742558, s75=34.08254454104669, s76=34.84672564828843, s77=34.90031331977329, s78=34.217426964067094, s79=35.03, s80=34.829337228686626, s81=35.640694811872486, s82=34.6621907358054, s83=34.9477616512553, s84=35.36955717482652, s85=35.02064237325755, s86=34.81790722492786, s87=35.109690177474775, s88=35.121816561235335, s89=34.96703922436443, s90=35.36876192881472, s91=34.95430350135521, s92=35.658557640675376, s93=35.68806992767282, s94=35.54751315223279, s95=34.39708977622091, s96=34.94204702169191, s97=34.919015204756775, s98=35.78236766249537, s99=34.92322674784095, s100=35.31876478719741, s101=34.788226636248645, s102=34.812093832739485, s103=35.62735090267868, s104=34.988263286860054, s105=34.795472900985914, s106=34.90865266511509, s107=35.07566419817475, s108=35.147503691958356, s109=35.832642229351144, s110=35.28787006150122, s111=34.8931410928295, s112=34.36407120219385, s113=35.562728269783065, s114=34.288690859551494, s115=35.3824406599367, s116=34.52621418361805, s117=34.99706834710071, s118=34.984682560983956, s119=34.43862544521726, s120=34.994913750126514, s121=35.07824604858676, s122=34.02040491040312, s123=35.62842443816883, s124=33.83964625719033, s125=34.307605664957116, s126=34.80412547187779, s127=35.02025306285834, s128=34.45045630321518, s129=34.04539649220161, s130=35.692919099972116, s131=35.453361214684065, s132=35.5980879542828, s133=34.502076552855804, s134=35.53265621968611, s135=35.18513529612576, s136=34.64146728562058, s137=35.81497702341632, s138=34.13365858374198, s139=34.710849475194735, s140=35.441126639612605, s141=34.735309443333264, s142=34.95120360700475, s143=35.10310881092355, s144=34.78003784826053, s145=34.70277926059655, s146=34.81468760885061, s147=35.16861531580745, s148=34.51921794752109, s149=35.15555177982842, s150=35.187221664553896, s151=35.22934866861739, s152=35.52802972799997, s153=35.14857742960984, s154=34.621016530630264, s155=35.63793940845333, s156=35.81806189284964, s157=35.639034885494894, s158=35.3610967180445, s159=34.8275485284126, s160=34.66429171826707, s161=35.343235756698064, s162=35.16162979597568, s163=34.644343702439386, s164=35.732088633804885, s165=34.379164905532846, s166=34.58600679010698, s167=34.41992802695751, s168=35.223875648636664, s169=34.516177001997306, s170=34.31381019707277, s171=35.106266569014124, s172=35.3559247203471, s173=35.88780549634091, s174=34.46293437448051, s175=35.1174672101038, s176=35.11080976204788, s177=35.0669255901668, s178=35.08700876483932, s179=34.81577549469441, s180=34.65169524785512, s181=34.63104192343893, s182=35.492450840709935, s183=33.723759518283956, s184=34.639464724361375, s185=35.290667410447604, s186=35.08309642239941, s187=34.59805207136981, s188=35.02059708314596, s189=35.46689759917978, s190=35.04887237318198, s191=34.83564976384203, s192=35.18008539520424, s193=35.65359552361088, s194=35.49838599299696, s195=35.4211973789694, s196=34.19181839405501, s197=35.37685667462542, s198=34.369390437088434, s199=34.23251735715107, s200=36.107741224520915, s201=34.712951815325674, s202=35.82105791565597, s203=35.77258752779277, s204=34.58277044729649, s205=35.314907187188275, s206=34.634499042072115, s207=34.99113873890582, s208=35.04337947006084, s209=34.8649579055206, s210=35.92777558392091, s211=35.46071686065867, s212=35.22273849877033, s213=35.150776011353, s214=34.90665926320567, s215=35.57693287877255, s216=34.6650630572609, s217=35.216943277522056, s218=34.83355351507067, s219=34.855309964266716, s220=35.116977441073736, s221=35.17138672682224, s222=34.55213158061924, s223=34.95298716811318, s224=35.06185210323065, s225=34.73835146645663, s226=35.13111997732124, s227=34.37016675180393, s228=35.38373966358735, s229=35.13284944102854, s230=35.13555429352917, s231=35.775779025911675, s232=34.820897220882856, s233=35.55933866642973, s234=34.885979080521025, s235=35.98833780725287, s236=35.4593844276052, s237=35.39339030555425, s238=34.74521126608465, s239=34.76266444232124, s240=35.03, s241=35.445356246460555, s242=34.829610784434244, s243=35.51406910666242, s244=35.37283430286354, s245=35.3435824194863, s246=34.828643512375734, s247=34.82417831041008, s248=34.77460466629185, s249=34.8795109527282, s250=34.8561058578509)]"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
